2015-05-04  Charlie Zender  <zender@uci.edu>

	* Tidy string functions by DYW and PVN

	* Makefile generates LINUX_C?? compiler defaults for MACOSX

2015-04-30  Charlie Zender  <zender@uci.edu>

	* Introduce special variable handling with --rgr_var

	* Wait until after ESMC_Finalize() to free dynamic memory provided to ESMF

2015-04-27  Charlie Zender  <zender@uci.edu>

	* Improve nco_rgr_esmf() genericity

2015-04-26  Charlie Zender  <zender@uci.edu>

	* Refine MACOSX linking for libesmf.a

	* Fix bug in call to ESMC_GridCreateFromFile(). Simple ESMF regridding works.

2015-04-23  Charlie Zender  <zender@uci.edu>

	* Annotate ESMF variables and calls

	* Add regression test for unchunking variables with _Shuffle set

2015-04-21  Charlie Zender  <zender@uci.edu>

	* Utilize extensible functions to format/access Tempest regridding commands

	* Enumerate Tempest (tps) rename commands

2015-04-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.9 release procedure:
 	Changes since nco-4.4.8: git, -x warn, crd att, cnk nco, shuffle
	cd ~/nco;git commit -a -m "Version nco-4.4.9 release: "
	git tag -d nco-4.4.9;git push origin :refs/tags/nco-4.4.9
	git tag -a nco-4.4.9 -m 'Version 4.4.9: ';git push --tags

	* Add dummy call to Tempest remap GenerateRLLMesh

2015-04-19  Charlie Zender  <zender@uci.edu>

 	* Eliminate borken nco_sng2array() (which failed on single-element lists) in favor of nco_lst_prs_2D()

	* Merge rgr (formerly dyw) branch back into master

2015-04-17  Charlie Zender  <zender@uci.edu>

	* Use generic NC_SHUFFLE and NC_NOSHUFFLE tokens

2015-04-15  Charlie Zender  <zender@uci.edu>

	* Set shuffle to false before unchunking variables. Fixes bug #74 reported by Dave Allured.

2015-04-13  Charlie Zender  <zender@uci.edu>

	* Support GCC under MacPorts on MacOSX using
	export LINUX_CC='gcc-mp-4.9'
	export LINUX_CXX='g++-mp-4.9 -std=c++11'
	So far compiling works but library archiving and linking does not so may need
	export LINUX_AR='gcc-ar-mp-4.9'
